--- a/src/index.html
+++ b/src/index.html
@@ -8,18 +8,9 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <!--&lt;!&ndash; Font Awesome Icons &ndash;&gt;-->
-  <!--<link href="vendor/fontawesome-free/css/all.min.css" type="text/css">-->
-
-  <!--&lt;!&ndash; Google Fonts &ndash;&gt;-->
-  <!--<link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700">-->
-  <!--<link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic' type='text/css'>-->
-
-  <!--&lt;!&ndash; Plugin CSS &ndash;&gt;-->
-  <!--<link href="vendor/magnific-popup/magnific-popup.css">-->
-
-  <!--&lt;!&ndash; Theme CSS - Includes Bootstrap &ndash;&gt;-->
-  <!--<link href="css/creative.min.css">-->
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 </head>
 <body>
   <app-root></app-root>
